# Archive

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  README.md
Game Programming Patterns - Singleton/: README.md
LearnOpenGL/: README.md
LearnOpenGL - 02.GettingStarted/: README.md
LearnOpenGL - 02.GettingStarted/02.GettingStarted/: GenerateProjectFiles.bat  HotReload.bat  premake5.lua
LearnOpenGL - 02.GettingStarted/02.GettingStarted/04.HelloTriangle.01/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/04.HelloTriangle.02/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/05.Shaders.01/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/05.Shaders.03/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/06.Textures.01/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/06.Textures.02/: main.cpp  texture.frag
LearnOpenGL - 02.GettingStarted/02.GettingStarted/07.Transformations.01/: transformations.frag
LearnOpenGL - 02.GettingStarted/02.GettingStarted/08.CoordinateSystems.02/: main.cpp
LearnOpenGL - 02.GettingStarted/02.GettingStarted/08.CoordinateSystems.03/: CoordinateSystems.vert
LearnOpenGL/02.GettingStarted/: .gitignore
RasterTek/: GenerateProjectFiles.bat  README.md
RasterTek - Tutorial02/: CMakeLists.txt
RasterTek - Tutorial02/Source/: SystemClass.cpp
RasterTek-Tutorial02/: CMakeLists.txt  README.md
RasterTek-Tutorial02/Source/: GraphicsClass.h
RasterTek-Tutorial03/: README.md
RasterTek-Tutorial04/: README.md
RasterTek-Tutorial05/: CMakeLists.txt  README.md
RasterTek-Tutorial05/Source/: GraphicsClass.cpp  GraphicsClass.h  TextureShaderClass.h
RasterTek-Tutorial06/: README.md
RasterTek-Tutorial06/Shader/: LightPS.hlsl
RasterTek-Tutorial06/Source/: CameraClass.h  LightClass.cpp  Main.cpp  ModelClass.cpp
RasterTek-Tutorial07/: README.md
RasterTek-Tutorial07/Source/: GraphicsClass.cpp
RasterTek-Tutorial09/: README.md
RasterTek-Tutorial09/Shader/: LightVS.hlsl
RasterTek-Tutorial09/Source/: GraphicsClass.cpp  GraphicsClass.h  LightClass.h
RasterTek-Tutorial10/: .gitignore  README.md
RasterTek-Tutorial10/Shader/: LightPS.hlsl  LightVS.hlsl
RasterTek-Tutorial10/Source/: LightClass.cpp  LightShaderClass.h
RasterTek/Tutorial03/: CMakeLists.txt
RasterTek/Tutorial03/Source/: GraphicsClass.h
RasterTek/Tutorial04/: CMakeLists.txt
RasterTek/Tutorial04/Shader/: ColorPS.hlsl
RasterTek/Tutorial09/: CMakeLists.txt
RasterTek/Tutorial10/: CMakeLists.txt
Tutorial02/: CMakeLists.txt
Tutorial02/Source/: GraphicsClass.cpp  InputClass.cpp  InputClass.h  SystemClass.cpp  SystemClass.h
Tutorial04/Shader/: ColorVS.hlsl
Tutorial04/Source/: ColorShaderClass.h  GraphicsClass.cpp  GraphicsClass.h  ModelClass.cpp  ModelClass.h
Tutorial05/: CMakeLists.txt
Tutorial05/Shader/: TexturePS.hlsl  TextureVS.hlsl
Tutorial05/Source/: ModelClass.cpp  TextureClass.cpp  TextureClass.h  TextureShaderClass.cpp
Tutorial06/: CMakeLists.txt
Tutorial06/Source/: GraphicsClass.cpp  LightClass.h  LightShaderClass.cpp  ModelClass.h
Tutorial07/: CMakeLists.txt
Tutorial07/Source/: ModelClass.h  StringHelper.hpp
Tutorial09/Shader/: LightPS.hlsl
Tutorial09/Source/: CameraClass.cpp  LightClass.cpp  LightShaderClass.cpp  LightShaderClass.h  TextureClass.cpp
Tutorial10/Source/: D3DClass.h  GraphicsClass.cpp  LightClass.h  ModelClass.cpp
(+38 files in other folders)
